--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -1,18 +1,49 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: left;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+    </style>
 </head>
 <body>
-    <h1>Todo List</h1>
-    <ul>
+    <h2>Todo List</h2>
+
+    <table>
+        <tr>
+            <th>Title</th>
+            <th>Description</th>
+            <th>Due Date</th>
+            <th>Status</th>
+            <th>Actions</th>
+        </tr>
         {% for todo in todos %}
-            <li>
-                <a href="{% url 'todo_detail' todo.id %}">{{ todo.title }}</a>
-                <a href="{% url 'todo_delete' todo.id %}">Delete</a>
-            </li>
+        <tr>
+            <td><a href="{% url 'get_todo_by_id' todo.id %}">{{ todo.title }}</a></td>
+            <td>{{ todo.description }}</td>
+            <td>{{ todo.due_date }}</td>
+            <td>{{ todo.status|yesno:"Completed,Not Completed" }}</td>
+            <td>
+                <a href="{% url 'delete_todo' todo.id %}">Delete</a>
+            </td>
+        </tr>
         {% endfor %}
-    </ul>
-    <a href="{% url 'todo_create' %}">Add New Todo</a>
+    </table>
+
+    <br>
+    <a href="{% url 'create_todo' %}">Add New Todo</a>
 </body>
 </html>
